fix: update vercel.json

--- a/vercel.json
+++ b/vercel.json
@@ -5,5 +5,11 @@
       "use": "@vercel/python",
       "config": { "pythonVersion": "3.11" }
     }
+  ],
+  "routes": [
+    {
+      "src": "/(.*)",
+      "dst": "webserver.py"
+    }
   ]
 }
